--- a/src/Card.css
+++ b/src/Card.css
@@ -1,15 +1,21 @@
 
 .tile {
-    width:250px;
-    height:250px;
-    margin: 25px;
+    max-width:300px !important;
+    max-height:300px !important;
+    width: 80vw;
+    height: 80vw;
     border-radius: 5%;
-
+    margin-top: 3vh;
+    padding: 0 !important;
 }
 
 .mask {
     height: 100%;
     width: 100%;
+    /* max-width:300px;
+    max-height:300px;
+    width: 80vw;
+    height: 80vw; */
     background:linear-gradient(180deg, rgba(255, 255, 255, 0.03) 50%, 
     rgba(0, 0, 0, 0.9) 100%);
     border-radius: 5%;
