--- a/src/Header.css
+++ b/src/Header.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center; 
+    text-decoration: none;
     border-bottom: 3px solid pink;
 }
 
