--- a/src/Card.css
+++ b/src/Card.css
@@ -1,23 +1,49 @@
+/* .card {
+    width: 100%;
+    max-width:300px !important;
+    max-height:300px !important;
+    height: 300px;
+    width: 300px;
+    background-color: #292929;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.24);
+    border: 2px solid rgba(7, 7, 7, 0.12);
+    font-size: 16px;   
+    transition: all 0.3s ease;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    transition: all 0.3s ease;
+ } */
+
+
 
 .tile {
     max-width:300px !important;
     max-height:300px !important;
-    width: 80vw;
-    height: 80vw;
+    width: 300px;
+    height: 300px;
     border-radius: 5%;
-    margin-top: 3vh;
+    margin: 2.5vh;
     padding: 0 !important;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 .mask {
     height: 100%;
     width: 100%;
-    /* max-width:300px;
+    max-width:300px;
     max-height:300px;
     width: 80vw;
-    height: 80vw; */
-    background:linear-gradient(180deg, rgba(255, 255, 255, 0.03) 50%, 
-    rgba(0, 0, 0, 0.9) 100%);
+    height: 80vw;
+    background:linear-gradient(180deg, rgba(255, 255, 255, 0.03) 25%, 
+    rgba(0, 0, 0, 0.95) 100%);
     border-radius: 5%;
 }
 
@@ -27,10 +53,20 @@
 }
 
 .card-title {
-    position: relative;
-    bottom: 0;
+    min-width:100%;
+    text-align: left;
+    margin-top: auto;
     font-size: 20px;
     color: white;
     padding-left: 15px;
     padding-bottom: 10px;
+}
+
+.card-text {
+    min-width:100%;
+    text-align: left;
+    font-size: 16px;
+    color: white;
+    padding-left: 15px;
+    padding-bottom: 20px;
 }
