--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 * {
   margin: 0;
 }
+
+html, body, .App, #root {
+  min-width: 390px;
+  min-height: 100%;
+  height: 100%;
+}
+
+#root {
+  background-color: #FF6962;
+}
