--- a/src/Cards.css
+++ b/src/Cards.css
@@ -1,9 +1,9 @@
 .card-group {
-    margin-bottom: 0;
+    /* margin-bottom: 0;
     margin-top: 2.5vh !important;
     margin-bottom: 2.5vh !important;
     margin-left: 2.5vw !important;
-    margin-right: 2.5vw !important;
+    margin-right: 2.5vw !important; */
     width: min(100vw, 2000px);
     justify-content: center;
 }
