--- a/src/Header.css
+++ b/src/Header.css
@@ -3,8 +3,8 @@
     justify-content: space-between;
     align-items: center; 
     text-decoration: none;
-    border-bottom: 3px solid pink;
-    background-color: white;
+    /* border-bottom: 3px solid pink; */
+    background-color: #FF6962;
 }
 
 .header__logo{
@@ -18,4 +18,8 @@
 
 .left_icon{
     padding-left: 10px;
+}
+
+svg {
+    color: white;
 }
