--- a/src/Login.css
+++ b/src/Login.css
@@ -1,32 +1,32 @@
-.registration-container {
+.login-container {
     padding: 0;
     margin: 0;
     height: 100vh;
     width:100vw;
-    background-color: #FF6962;
+    /* background-color: rgb(255, 105, 98); */
+    background-color: #89CFF0;
     display:flex;
     align-items: center;
     justify-content: center;
 }
 
-.registration-form{
+.form{
+    position:relative;
     background-color: white;
     border-radius: 5px;
     width: 75vw;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0 !important;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    padding-bottom: 3vh;
+    /* padding-bottom: 3vh; */
     border-radius: 20px;
+    top:100px;
 }
 
-.get-file {
-    margin-left: 90px;
-}
-
-.registration-form-body{
+.form-body{
     text-align: center;
     padding: 20px 10px;
 }
@@ -49,7 +49,7 @@
   padding-bottom: 15px !important;
   appearance: button;
   backface-visibility: hidden;
-  background-color: #405cf5;
+  background-color: #86B4D7;
   border-radius: 6px;
   border-width: 0;
   box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
@@ -83,3 +83,22 @@
   box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
 }
 
+.dog {
+    position: absolute;
+    height:300px;
+    top: 135px;
+    right: 22px;
+    z-index: 1;
+}
+
+.logo {
+    position: absolute;
+    height:150px;
+    margin-top: 20px;
+    top: 0px;
+}
+
+.register-button {
+    margin-top:30px;
+    font-size: 12px;
+}
