--- a/src/Login.css
+++ b/src/Login.css
@@ -15,6 +15,7 @@
     background-color: white;
     border-radius: 5px;
     width: 75vw;
+    max-width: 500px;
     height: 50vh;
     display: flex;
     flex-direction: column;
@@ -85,8 +86,9 @@
 
 .dog {
     position: absolute;
-    height:300px;
-    top: 135px;
+    height:150px;
+    top:22vh;
+    left:calc(50vw - 100px);
     right: 22px;
     z-index: 1;
 }
