--- a/src/Card.css
+++ b/src/Card.css
@@ -9,7 +9,7 @@
     border-radius: 10px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.24);
     border: 2px solid rgba(7, 7, 7, 0.12);
-    font-size: 16px;   
+    font-size: 16px;
     transition: all 0.3s ease;
     position: relative;
     display: flex;
@@ -42,7 +42,7 @@
     max-height:300px;
     width: 80vw;
     height: 80vw;
-    background:linear-gradient(180deg, rgba(255, 255, 255, 0.03) 25%, 
+    background:linear-gradient(180deg, rgba(255, 255, 255, 0.03) 25%,
     rgba(0, 0, 0, 0.95) 100%);
     border-radius: 5%;
 }
@@ -73,6 +73,7 @@
 .insta-container{
     /* padding-bottom: 20px; */
     margin-left: 15px;
+    margin-bottom: 15px;
 }
 
 .insta-logo {
